tests/invalid/duplicate-action-names.pkl
/// Invariant 3: action names are unique workflow-wide (canonical
/// addressing).
module tests.invalid.duplicateActionNames

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../support/testkit.pkl"

res: resource.EphemeralResource = new {
  name = "res"
  provider = new testkit.TestProvider { provides { "bash" } }
}

h: host.Host = new { name = "h"; backedBy = res }

j1: job.Job = new {
  name = "j1"
  runsOn = h
  actions {
    new testkit.TestAction { name = "step"; requires { "bash" } }
  }
}

j2: job.Job = new {
  name = "j2"
  runsOn = h
  actions {
    new testkit.TestAction { name = "step"; requires { "bash" } }
  }
}

wf {
  name = "bad"
  resources { res }
  hosts { h }
  jobs { j1; j2 }
}
